--- a/environment-short.yml
+++ b/environment-short.yml
@@ -42,4 +42,18 @@ dependencies:
 - python=3.9
 - pip
 - pip:
-  - -r requirements.txt
+  - lckr-jupyterlab-variableinspector
+  - xmltodict
+  - adjustText
+  - dash-cytoscape
+  - brainrender
+  - network_control
+  - semopy
+  - cca-zoo
+  - bctpy
+  - gemmr
+  - gower
+  - antropy
+  - pyvis
+  - distro
+  - abagen
