added manually created Dockerfiles and updated README correspondingly

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
 # folders that should be ignored during docker buid. This will speed up the process, because otherwise docker will load all directories into RAM.
 testing/
 tcy/
+manually_created/
